Fix side navigation overlapping with global nav

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -31,7 +31,7 @@
     top: 0;
     transform: translateX(-100%);
     width: 100%;
-    z-index: 12;
+    z-index: 102;
 
     .p-side-navigation:target &,
     [class*='p-side-navigation--']:target &,
@@ -63,7 +63,7 @@
     position: fixed;
     right: 0;
     top: 0;
-    z-index: 11;
+    z-index: 101;
 
     .p-side-navigation:target &,
     [class*='p-side-navigation--']:target &,
